--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ dependencies = [
     "pandas>=2.3.3",
     "pudb>=2025.1.5",
     "pyarrow>=22.0.0",
+    "pykeops>=2.3",
     "python-dotenv>=1.2.1",
     "pytorch-lightning>=2.6.0",
     "pytorch-metric-learning>=2.9.0",
     "rich>=14.2.0",
+    "s5-pytorch>=0.2.1",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
