--- a/machine_learning/configs/experiments/who_is_alyx/gru_bra.yaml
+++ b/machine_learning/configs/experiments/who_is_alyx/gru_bra.yaml
@@ -8,6 +8,8 @@ run_group: gru_bra
 
 cache_datamodule: True
 
+seed: 42
+
 logger:
   wandb:
     project: "Who-Is-Alyx"
@@ -15,7 +17,7 @@ logger:
 
 datamodule:
   data_path: ${data_dir}/15_fps_classifier_71_subjects.hdf5
-  batch_size: 200
+  batch_size: 1600
   dataset_kwargs:
     coordinate_system:
       forward: "x"
@@ -30,18 +32,25 @@ datamodule:
 
 lightning_module:
   optimizer_options:
-    lr: MISSING
+    lr: 0.0005
+
+tuner:
+  scale_batch_size:
+    enabled: False
+    mode: "power"
+    #init_val: 16 # handled by datamodule config
+    max_trials: 8
 
 trainer:
-  max_epochs: 70
-  min_epochs: 70
-  auto_scale_batch_size: True
+  max_epochs: 40
+  min_epochs: 40
+  #auto_scale_batch_size: True
   check_val_every_n_epoch: 1
 
 model:
   num_out_classes: "auto" # is set in train.py
   hyperparameters:
     cell_type: "GRU"
-    num_rnn_layers: MISSING
-    rnn_hidden_size: MISSING
-    dropout: MISSING
+    num_rnn_layers: 4
+    rnn_hidden_size: 400
+    dropout: 0.1
