--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "User Identification in VR applications using the who-is-alyx data
 readme = "README.md"
 requires-python = ">=3.10,<3.11"
 dependencies = [
+    "calflops>=0.3.2",
     "faiss-gpu>=1.7.2",
     "hydra-colorlog>=1.2.0",
     "hydra-core>=1.2.0",
@@ -28,5 +29,6 @@ dependencies = [
     "torch>=2.9.1",
     "torchvision>=0.24.1",
     "tqdm>=4.67.1",
+    "transformers>=5.0.0",
     "wandb>=0.23.1",
 ]
