Added TCN model

--- a/machine_learning/configs/experiments/who_is_alyx/tcn_bra.yaml
+++ b/machine_learning/configs/experiments/who_is_alyx/tcn_bra.yaml
@@ -62,7 +62,7 @@ datamodule:
     fps: 15
     window_size: 300
     data_encoding:
-      value: "body_relative_acceleration"
+      value: "body_relative"
 
 lightning_module:
   optimizer_options:
