--- a/machine_learning/configs/callbacks/cnn_classification.yaml
+++ b/machine_learning/configs/callbacks/cnn_classification.yaml
@@ -29,12 +29,12 @@ cohen_checkpoint:
   filename: "best_cohen_kappa_val-epoch_{epoch:03d}"
   auto_insert_metric_name: False
 
-# early_stopping:
-#   _target_: pytorch_lightning.callbacks.EarlyStopping
-#   monitor: "accuracy/val"
-#   min_delta: 0.005
-#   patience: 5
-#   verbose: False
-#   strict: False
-#   stopping_threshold: 1
-#   divergence_threshold: 0.5
+early_stopping:
+  _target_: pytorch_lightning.callbacks.EarlyStopping
+  monitor: "accuracy/val"
+  min_delta: 0.005
+  patience: 5
+  verbose: False
+  strict: False
+  stopping_threshold: 1
+  #divergence_threshold: 0.5
