--- a/machine_learning/configs/callbacks/rnn_classification.yaml
+++ b/machine_learning/configs/callbacks/rnn_classification.yaml
@@ -39,12 +39,12 @@ matthews_checkpoint:
   filename: "best_matthews_corrcoef_val-epoch_{epoch:03d}"
   auto_insert_metric_name: False
 
-# early_stopping:
-#   _target_: pytorch_lightning.callbacks.EarlyStopping
-#   monitor: "accuracy/val"
-#   min_delta: 0.001
-#   patience: 10
-#   verbose: False
-#   strict: False
-#   stopping_threshold: 1
-#   divergence_threshold: 0.3
+early_stopping:
+  _target_: pytorch_lightning.callbacks.EarlyStopping
+  monitor: "accuracy/val"
+  min_delta: 0.001
+  patience: 10
+  verbose: False
+  strict: False
+  stopping_threshold: 1
+  #divergence_threshold: 0.3
