--- a/machine_learning/configs/experiments/who_is_alyx/lstm_bra.yaml
+++ b/machine_learning/configs/experiments/who_is_alyx/lstm_bra.yaml
@@ -3,6 +3,8 @@
 defaults:
   - override /model: rnn_model.yaml
   - override /datamodule: window_datamodule.yaml
+  - override /lightning_module: classification_module.yaml
+  - override /callbacks: cnn_classification.yaml
 
 run_group: lstm_bra
 
